Fix a layout bug.

--- a/public/css/sass-modules/_layout.scss
+++ b/public/css/sass-modules/_layout.scss
@@ -65,7 +65,7 @@
                 width: 100%;
 
                 > .detailPanel {
-                    padding: inherit;
+                    padding-left: .5rem;
                 }
             }
         }
